individual_menu_add_personas(): restore the persona.individual after creating single_individual

https://bugzilla.gnome.org/show_bug.cgi?id=684971